--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -8,7 +8,7 @@
           </svg>
         </button>
         <h2 class="modal-read-title">How it’s made?</h2>
-        <iframe
+        <!--<iframe
           width="224"
           height="199"
           src="https://www.youtube.com/embed/qi99fZPH3oY"
@@ -16,7 +16,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-        ></iframe>
+        ></iframe>-->
 
         <p class="modal-read-p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
