--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -8,15 +8,17 @@
           </svg>
         </button>
         <h2 class="modal-read-title">How it’s made?</h2>
-        <!--<iframe
-          width="224"
-          height="199"
-          src="https://www.youtube.com/embed/qi99fZPH3oY"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>-->
+        <div class="video">
+          <iframe
+            width="224"
+            height="199"
+            src="https://www.youtube.com/embed/qi99fZPH3oY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
 
         <p class="modal-read-p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
