--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -150,14 +150,15 @@
 }
 
 .video {
-    
+    width: 224px;
+    height: 199px;
     margin-bottom: 20px; }
 
 @media screen and (min-width: 768px) {
     .video {
-    width: 448
     display: flex;
-    justify-content: center;px;
+    justify-content: center;
+    width: 448px;
     height: 205px;
     margin-bottom: 32px;
     }
