--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -8,8 +8,9 @@
           </svg>
         </button>
         <h2 class="modal-read-title">How it’s made?</h2>
-        <div class="video">
+        <div class="modal-video">
           <iframe
+            class="video"
             src="https://www.youtube.com/embed/qi99fZPH3oY"
             title="YouTube video player"
             frameborder="0"
