--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -160,11 +160,13 @@
 }
 
 .video {
+    width: 100%;
+    height: 199px;
     margin-bottom: 20px; }
 
 @media screen and (min-width: 768px) {
     .video {
-    width: 448px;
+    width: 100%;
     height: 205px;
     
     }
