--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -3,8 +3,8 @@
 //     padding: 0;
 // }
 .about {
-    // padding-top: 60px;
-    // padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -114,11 +114,9 @@ height: 12pt;
 
     width: 280px;
     height: 300px;
-    // background-color: rgba(248, 210, 78, 0.7);
+    
     background-image: url(../images/background/about-bg/about-picture-bg-480.png); 
-    // background-image: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)),
-    //     #D9D9D9;
-    //     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+    
         border-radius: 140px;
         background-repeat: no-repeat;
         background-position:  top;
@@ -213,8 +211,8 @@ height: 12pt;
     width: 491px;
     height: 529px;
     background-image: url(../images/background/about-bg/about-picture-bg-1200.png);
-    
-    padding-top: 50px;
+    background-size:105% ;
+    padding-top: 60px;
     padding-left: 0;
     padding-right: 14px;
 }
