--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -3,7 +3,7 @@
 <section class="customer-rewiews">
     <div class="container">
         <h2 class="customer-rewiews-visual-hidden">customer rewiews</h2>
-        <div class="swiper mySwiper">
+        <div class="swiper2 mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide customer-rewiews-review">
                     <img class="customer-rewiews-customer" srcset="
@@ -50,7 +50,7 @@
 
 <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
-    var swiper = new Swiper(".mySwiper", {
+    var swiper = new Swiper(".mySwiper2", {
         slidesPerView: 1,
         spaceBetween: 30,
         keyboard: {
