--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -16,7 +16,7 @@
   min-width: 480px;
   padding-top: 40px;
   background-color: #84A178;
-  min-width: 320px;
+  // min-width: 320px;
   padding-top: 50px;
   /* background-color: #84a178; */
 }
