--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,46 +2,47 @@
 
 <section class="customer-rewiews">
     <div class="container">
-        <h2 class="customer-rewiews-visual-hidden">customer rewiews</h2>
-        <div class="swiper2 mySwiper">
+        <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
-                <div class="swiper-slide customer-rewiews-review">
-                    <img class="customer-rewiews-customer" srcset="
+                <div class="swiper-slide review">
+                    <img class="customer" srcset="
                                                 ../images/reviews/review-1-@1x-85.jpg 85w,
                                                 ../images/reviews/review-1-@2x-170.jpg 170w"
                         src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
-                    <p class="customer-rewiews-review-text">
-                        Every day we come to you with friends after classes in college.
-                        We love your ice cream and casual atmosphere!
+                    <p class="review-text">
+                        I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition,
+                        you have beautiful
+                        serving, cozy atmosphere and polite staff.
+
                     </p>
-                    <h3 class="customer-rewiews-cusomer-name">Emily, Los Angeles</h3>
+                    <h3 class="cusomer-name">Emily, Los Angeles</h3>
                 </div>
                 <div class="swiper-slide review">
-                    <img class="customer-rewiews-customer" srcset="
+                    <img class="customer" srcset="
                                                 ../images/reviews/review-2-@1x-85.jpg 85w,
                                                 ../images/reviews/review-2-@2x-170.jpg 170w"
                         src="../images/reviews/review-1-@1x-85.jpg" alt="Bryan, New-York">
-                    <p class="customer-rewiews-review-text">
+                    <p class="review-text">
                         It's freshly made ice cream. The best place to have ice cream in Chicago.
                         The quality is good and worth its price .
                         Hope the price don't increase
                     </p>
-                    <h3 class="customer-rewiews-cusomer-name">Bryan, New-York</h3>
+                    <h3 class="cusomer-name">Bryan, New-York</h3>
                 </div>
-                <div class="swiper-slide customer-rewiews-review">
-                    <img class="customer-rewiews-customer" srcset="
+                <div class="swiper-slide review">
+                    <img class="customer" srcset="
                                                 ../images/reviews/review-3-@1x-85.jpg 85w,
                                                 ../images/reviews/review-3-@2x-170.jpg 170w"
                         src="../images/reviews/review-1-@1x-85.jpg" alt="Diana, Chicago">
-                    <p class="customer-rewiews-review-text">
+                    <p class="review-text">
                         Ice cream is my passion! I love your chocolate hazelnut ice cream!
                         And I really like the excellent service - always
                         served politely and quickly!
                     </p>
-                    <h3 class="customer-rewiews-cusomer-name">Diana, Chicago</h3>
+                    <h3 class="cusomer-name">Diana, Chicago</h3>
                 </div>
             </div>
-            <div class="customer-rewiews-swiper-pagination"></div>
+            <div class="swiper-pagination"></div>
         </div>
     </div>
 </section>
