--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,4 +1,3 @@
-
     .gallery-visual-hidden {
         position: absolute;
         white-space: nowrap;
@@ -12,12 +11,12 @@
         margin: -1px;
     }
 
-    .gallery-swiper{
+    .swiper {
         width: 100%;
         height: 100%;
     }
 
-    .gallery-swiper-slide {
+    .swiper-slide {
         text-align: center;
         font-size: 18px;
         background: #fff;
@@ -37,14 +36,14 @@
         align-items: center;
     }
 
-    .gallery-swiper-slide img {
+    .swiper-slide img {
         display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .gallery-icecream {
+    .icecream {
         border-radius: 18px;
     }
 
@@ -54,21 +53,21 @@
         padding-top: 32px;
     }
 
-@media screen and (min-width: 768px; ) {
-    .gallery {
-        padding-top: 60px;
-    }
-}
-
-/* -desctop- */
-@media screen and (min-width: 1200px) {
-    .gallery-icecream {
-        border-radius: 24px;
+    @media screen and (min-width: 768px; ) {
+        .gallery {
+            padding-top: 60px;
+        }
     }
 
-    .gallery {
-        padding-left: 93px;
-        padding-right: 93px;
-        padding-top: 80px;
+    /* -desctop- */
+    @media screen and (min-width: 1200px) {
+        .icecream {
+            border-radius: 24px;
+        }
+
+        .gallery {
+            padding-left: 93px;
+            padding-right: 93px;
+            padding-top: 80px;
+        }
     }
-}
