добавил скрытый заголовок h2

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,6 +2,7 @@
 
 <section class="customer-rewiews">
     <div class="container">
+        <h2 class="customer-rewiews-visual-hidden">customer rewiews</h2>
         <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
                 <div class="swiper-slide review">
