--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,4 +1,4 @@
-    .visual-hidden {
+    .ustomer-rewiews-visual-hidden {
         position: absolute;
         white-space: nowrap;
         width: 1px;
