--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -149,12 +149,6 @@
     }
 }
 
-@media screen and (min-width: 768px) {
-    .modal-video {
-        display: flex;
-        justify-content: center;
-    }
-}
 
 .video {
     width: 100%;
@@ -165,6 +159,7 @@
     .video {
     width: 100%;
     height: 205px;
+    margin-bottom: 32px;
     }
 }
 
