--- a/src/partials/modal-location.html
+++ b/src/partials/modal-location.html
@@ -7,7 +7,7 @@
             <use href="./images/sprite.svg#icon-close-line"></use>
           </svg>
         </button>
-        <h2 class="modal-location-title">How it’s made?</h2>
+        <h2 class="modal-location-title">Our Locations</h2>
         <div class="modal-map">
           <iframe
             class="map"
@@ -19,8 +19,10 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
+          <button> Open map </button>
         </div>
-        <button type="button">Open <map name=""></map></button>
+        
+       
       </div>
     </div>
   </div>
