--- a/src/sass/modal-location.scss
+++ b/src/sass/modal-location.scss
@@ -66,7 +66,7 @@
 @media screen and (min-width: 768px) {
     .modal-location {
         width: 568px;
-        padding: 32px;
+        padding: 32px 60px;
     }
 }
 
@@ -143,7 +143,7 @@
 @media screen and (min-width: 768px) {
     .map {
         width: 100%;
-        height: 205px;
+        height: 260px;
         margin-bottom: 32px;
     }
 }
