--- a/src/partials/modal-location.html
+++ b/src/partials/modal-location.html
@@ -19,7 +19,7 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
-          <button> Open map </button>
+          <button class="btn-location"> Open map </button>
         </div>
         
        
