--- a/src/sass/modal-location.scss
+++ b/src/sass/modal-location.scss
@@ -147,3 +147,16 @@
         margin-bottom: 32px;
     }
 }
+
+
+.btn-location {
+color: #131313;
+font-weight: 600;
+font-size: 12px;
+line-height: 1.2;
+text-align: center;
+background-color: #F8D24E;
+border-radius: 10px;
+
+}
+
