--- a/src/sass/modal-location.scss
+++ b/src/sass/modal-location.scss
@@ -150,12 +150,14 @@
 
 
 .btn-location {
+padding: 12px 34px;
 color: #131313;
 font-weight: 600;
 font-size: 12px;
 line-height: 1.2;
 text-align: center;
 background-color: #F8D24E;
+border: none;
 border-radius: 10px;
 
 }
