--- a/src/sass/modal-location.scss
+++ b/src/sass/modal-location.scss
@@ -160,6 +160,9 @@ background-color: #F8D24E;
 border: none;
 border-radius: 10px;
 line-height: 1.2;
+display: inline-block;
+margin-left: auto;
+margin-right: auto;
 
 }
 
