--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
-    <div class="overlay js-overlay-modal" data-modal>
-      <div class="modal-read">
+    <div class="overlay js-overlay-modal">
+      <div class="modal-read" data-modal="3">
         <button class="modal-btn-read" data-modal-close type="button">
           <svg class="modal-icon-close" width="24" height="24">
             <use href="./images/sprite.svg#icon-close-line"></use>
@@ -29,7 +29,3 @@
     </div>
   </div>
 </section>
-
-<!-- Подложка под модальным окном 
-<div class="overlay js-overlay-modal"></div>
--->
