--- a/src/partials/modal-location.html
+++ b/src/partials/modal-location.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
-    <div class="overlay js-overlay-modal" data-modal>
-      <div class="modal-location">
+    <div class="overlay js-overlay-modal">
+      <div class="modal-location" data-modal="4">
         <button class="modal-btn-location" data-modal-close type="button">
           <svg class="modal-icon-close" width="24" height="24">
             <use href="./images/sprite.svg#icon-close-line"></use>
@@ -32,7 +32,3 @@
     </div>
   </div>
 </section>
-
-<!-- Подложка под модальным окном 
-<div class="overlay js-overlay-modal"></div>
--->
