--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -53,7 +53,7 @@
         padding-top: 32px;
     }
 
-    @media screen and (min-width: 768px; ) {
+    @media screen and (min-width: 768px) {
         .gallery {
             padding-top: 60px;
         }
