--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -18,28 +18,43 @@
     font-size: 16px;
     line-height: 1.5;
   }
-  
-  // @media screen and (min-width: 768px) {
-  //   font-size: 20px;
-  //   line-height: 1.4;
-  // }
-  
+    
   font-size: 16px;
   line-height: 1.5;
 }
 
-// .modal-products-form-label-check{
-//   position: fixed;
-//   top: 0;
-//     left: 0;
-// }
-
-.send-form-checkbox {
-//  position: relative;
-  margin: 0;
-  margin-top: 86px;
-  padding: 0;
+.modal-products-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 32px;
+  row-gap: 32px;
 }
+
+.modal-products-item {
+  position: relative;
+  column-gap: 32px;
+  row-gap: 32px;
+}
+
+.send-form-checkbox{
+  position: absolute;
+}
+
+
+.send-form-label-wrapper {
+  display: block;
+  position: relative;
+  margin-top: 4px;
+}
+
+
+// .send-form-checkbox {
+// //  position: relative;
+//   margin: 0;
+//   margin-top: 86px;
+//   padding: 0;
+// }
 
 // .modal-img-container{
 //   position: relative;
@@ -61,19 +76,19 @@
 //   // left: auto;
 // }
 
-.modal-product {
-  position: fixed;
-  margin: -66px auto 0 auto;
-}
+// .modal-product {
+//   position: fixed;
+//   margin: -66px auto 0 auto;
+// }
 
-.modal-product1, .modal-product2, .modal-product3 {
-  // margin: 93px auto 0 auto;
-  margin: auto;
-  width: 132px;
-  // padding: 86px 16px 20px 16px;
-  // height: 136px;
-  border-radius: 15px;
-}
+// .modal-product1, .modal-product2, .modal-product3 {
+//   // margin: 93px auto 0 auto;
+//   margin: auto;
+//   width: 132px;
+//   // padding: 86px 16px 20px 16px;
+//   // height: 136px;
+//   border-radius: 15px;
+// }
 
 .modal-product1 {
   background-color: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
@@ -91,7 +106,8 @@
 }
 
 .modal-product-name{
-  margin-top: 86px;
+  margin: 0;
+  // margin-top: 86px;
   font-family: 'Montserrat';
     // font-style: normal;
   font-weight: 700;
