--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -6,7 +6,7 @@
       </svg>
     </button>
 
-    <h1 class="modal-title">
+    <h1 class="modal-franchise-title">
       Thank you for your interest in owning an Ice Cream shop
     </h1>
     <p class="modal-franchise-text">
