--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -57,14 +57,14 @@
 }
 
 @media screen and (max-width: 767px) {
-  .modal-read {
+  .modal-franchise {
     min-width: 280px;
     padding: 28px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .modal-read {
+  .modal-franchise {
     width: 568px;
     padding: 32px 60px;
   }
@@ -77,7 +77,7 @@
 }
 */
 
-.modal-btn-read {
+.modal-close-btn {
   position: absolute;
   top: 12px;
   right: 12px;
@@ -103,22 +103,7 @@
   }
 }
 
-
-.video {
-  width: 100%;
-  height: 199px;
-  margin-bottom: 20px;
-}
-
-@media screen and (min-width: 768px) {
-  .video {
-    width: 100%;
-    height: 205px;
-    margin-bottom: 32px;
-  }
-}
 .modal-franchise-title {
-  margin-top: 28px;
   font-family: 'Seymour One';
   // font-style: normal;
   // font-weight: 400;
@@ -130,6 +115,7 @@
   text-align: center;
 
   color: #131313;
+  margin-bottom: 20px;
 }
 
 .modal-franchise-text {
