--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -66,7 +66,7 @@
         ></textarea>
       </label>
 
-      <button type="submit" class="modal-submit-button">Submit</button>
+      <button type="submit" class="btn-franchise">Submit</button>
     </form>
   </div>
 </div>
