Product card correct
Для Modal ingredients потрібні маркери (індивідуальний клас  на стрілочках) з секції Products.
Product card - відновлюю після чп.
В гілку main не зливати!!!

--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -22,12 +22,31 @@
 
       <h1 class="modal-title">Chololate icecream</h1>
       <section>
-        <picture>
+        <picture class="modal-product_1">
           <div class="modal-img-container modal-ingredient">
-            <source srcset="./images/modal-product.webp 1x, ./images/modal-product@2x.webp 2x" media="(min-width:1200px)"
+            <source srcset="./images/modal-product.webp 1x, ./images/modal-product@2x.webp 2x,
+                ./images/modal-product@3x.webp 3x" media="(min-width:1200px)"
                   type="image/webp">
-            <source srcset="./images/modal-product@2x.png 2x" media="(min-width:1200px)" >
+            <source srcset="./images/modal-product@2x.png 2x, ./images/modal-product@2x.png 2x" media="(min-width:1200px)" >
             <img class="modal-img-product" src="./images/modal-product.png" alt="Chololate icecream">
+          </div>
+        </picture>
+        <picture class="modal-product_2 visually-hidden">
+          <div class="modal-img-container modal-ingredient">
+            <source srcset="./images/modal-product2.webp 1x, ./images/modal-product2@2x.webp 2x,
+                ./images/modal-product2@3x.webp 3x" media="(min-width:1200px)"
+                  type="image/webp">
+            <source srcset="./images/modal-product2@2x.png 2x,./images/modal-product2@3x.png 3x" media="(min-width:1200px)" >
+            <img class="modal-img-product" src="./images/modal-product2.png" alt="Chololate icecream">
+          </div>
+        </picture>
+        <picture class="modal-product_3 visually-hidden">
+          <div class="modal-img-container modal-ingredient">
+            <source srcset="./images/modal-product3.webp 1x, ./images/modal-product3@2x.webp 2x,
+                 ./images/modal-product3@3x.webp 3x" media="(min-width:1200px)"
+                  type="image/webp">
+            <source srcset="./images/modal-product3@2x.png 2x, ./images/modal-product3@3x.png 3x" media="(min-width:1200px)" >
+            <img class="modal-img-product" src="./images/modal-product3.png" alt="Chololate icecream">
           </div>
         </picture>
       </section>      
