--- a/src/partials/modal-product-card.html
+++ b/src/partials/modal-product-card.html
@@ -36,6 +36,8 @@
               class="modal-products-form-label-check"
             >
               <div class="modal-product-1">
+                <p class="modal-product-name">ice cream</p>
+              </div>
                 <div class="modal-img-container">
                   <picture>
                     <source
@@ -58,8 +60,9 @@
                     />
                   </picture>
                 </div>
+              <!-- <div class="modal-product-1">
                 <p class="modal-product-name">ice cream</p>
-              </div>
+              </div> -->
             </label>
           </li>
           <li class="modal-products-item">
