--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -28,7 +28,7 @@
   flex-wrap: wrap;
   justify-content: center;
   column-gap: 32px;
-  row-gap: 32px;
+  row-gap: 5px;
 }
 
 .modal-products-item {
@@ -42,11 +42,29 @@
 }
 
 
-.send-form-label-wrapper {
-  display: block;
+.modal-img-container{
   position: relative;
-  margin-top: 4px;
+  top: -1px;
 }
+
+.modal-product-1 {
+
+  // position: relative;
+  // bottom: -1px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  padding: 20px 0;
+  height: 85px;
+  
+}
+
+// .send-form-label-wrapper {
+//   display: block;
+//   position: relative;
+//   margin-top: 4px;
+// }
 
 
 // .send-form-checkbox {
@@ -90,17 +108,17 @@
 //   border-radius: 15px;
 // }
 
-.modal-product1 {
+.modal-product-1 {
   background-color: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
   box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
 }
 
-.modal-product2 {
+.modal-product-2 {
   background-color: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
   box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
 }
 
-.modal-product3 {
+.modal-product-3 {
   background-color: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
   box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
 }
