--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -36,12 +36,12 @@
         align-items: center;
     }
 
-    .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.swiper-slide img {
+    display: block;
+    min-width: 280px;
+    min-height: 130px;
+    object-fit: cover;
+}
 
     .icecream {
         border-radius: 18px;
