--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -19,7 +19,8 @@
     .swiper-slide {
         text-align: center;
         font-size: 18px;
-        background: #fff;
+        background: rgba(0, 0, 0, 0);
+
 
         /* Center slide text vertically */
         display: -webkit-box;
