--- a/src/sass/_modal-ingredients.scss
+++ b/src/sass/_modal-ingredients.scss
@@ -239,9 +239,72 @@
     .modal-product_3{
       display: none;
     }
+
+    .modal-img-container.modal-ingredient{
+      background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+      box-shadow: 0px 8px 30px rgba(10, 136, 23, 0.25);
+    }
+
+    .modal-value-container {
+      background: #9CBE8F;
+      border: 2px solid #9CBE8F;
+    }
+
+    .modal-nutritional-value-item { 
+      border: 2px solid #9CBE8F;
+    }
   }
+}
 
+.marker2:active {
+  @media screen  and (min-width: 0){
+    .modal-product_1{
+      display: none;
+    }
+    .modal-product_3{
+      display: none;
+    }
 
+    .modal-img-container.modal-ingredient {
+      background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+      box-shadow: 0px 8px 30px rgba(153, 114, 23, 0.25);
+    }
+
+    .modal-value-container {
+      background: #EFD478;;
+      border: 2px solid #EFD478;
+    }
+
+    .modal-nutritional-value-item{ 
+      border: 2px solid #EFD478;
+    }
+  }
+}
+
+.marker2:active {
+  @media screen and (min-width: 0) {
+    .modal-product_1 {
+      display: none;
+    }
+
+    .modal-product_2 {
+      display: none;
+    }
+
+    .modal-img-container.modal-ingredient {
+      background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+      box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
+    }
+
+    .modal-value-container {
+      background: #D6936D;
+      border: 2px solid #D6936D;
+    }
+
+    .modal-nutritional-value-item {
+      border: 2px solid #D6936D;
+    }
+  }
 }
 
 
