--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -11,6 +11,17 @@
         margin: -1px;
     }
 
+        .customer-rewiews{
+        background-image: url("./images/background/mob-bg-@1x-581.jpg");
+        min-Width: 320px;
+        min-Height: 1037px;
+        margin-left: auto;
+        margin-right: auto;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        }
+
 
     .customer {
         border-radius: 50%;
