customer-rewiews background-image

--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -92,3 +92,27 @@
             margin-bottom: 50px;
         }
     }
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .customer-rewiews {
+        background-image: url("./images/background/mob-bg-@2x-1770.jpg");
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    .customer-rewiews{
+        background-image: url("./images/background/tab-bg-@2x-1926.jpg");
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .customer-rewiews {
+        background-image: url("./images/background/desk-bg-@2x-2600.jpg");
+    }
+}
