поменял классы у свайперов

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,7 +4,7 @@
                 <h2 class="gallery-visual-hidden">gallery</h2>
                 <div class="swiper mySwiper1 gallery-swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <div class="swiper-slide gallery-swiper-slide">
                             <img class="icecream" srcset="
                                                                 ../images/gallery/mob-gallery-1-@1x-280.jpg 280w,
                                                                 ../images/gallery/mob-gallery-1-@1x-480.jpg 480w,
@@ -17,7 +17,7 @@
                                                                 " sizes="100vw"
                                 src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="Мороженко1">
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide gallery-swiper-slide">
                             <img class="icecream" srcset="
                                                                 ../images/gallery/mob-gallery-2-@1x-280.jpg 280w,
                                                                 ../images/gallery/mob-gallery-2-@1x-480.jpg 480w,
@@ -30,7 +30,7 @@
                                                                 " sizes="100vw"
                                 src="../images/gallery/desk-gallery-2-@1x-1013.jpg" alt="Мороженко2">
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide gallery-swiper-slide">
                             <img class="icecream" srcset="
                                                                 ../images/gallery/mob-gallery-3-@1x-280.jpg 280w,
                                                                 ../images/gallery/mob-gallery-3-@1x-480.jpg 480w,
