--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -28,7 +28,7 @@
         border-radius: 25px;
     }
 
-    .swiper-slide {
+    .gallery-swiper-slide {
         text-align: center;
         font-size: 18px;
         background: rgba(0, 0, 0, 0);
@@ -49,7 +49,7 @@
         align-items: center;
     }
 
-.swiper-slide img {
+.gallery-swiper-slide img {
     display: block;
     min-width: 280px;
     min-height: 130px;
