--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
-<header>
+<header id="home">
   <div class="conteiner header-main-nav">
-    <a href="" class="header-logo link">
+    <a href="#home" class="header-logo link">
       <svg class="header-logo-icon">
         <use href="./images/sprite.svg#icon-Logo"></use>
       </svg>
@@ -8,7 +8,7 @@
     <nav>
       <ul class="header-site-nav list">
         <li class="header-item">
-          <a href="#" class="header-nav-link link">Home</a>
+          <a href="#home" class="header-nav-link link">Home</a>
         </li>
         <li class="header-item">
           <a href="#" class="header-nav-link link">How it’s made?</a>
@@ -21,16 +21,16 @@
         </li>
       </ul>
     </nav>
-    <button type="button" class="header-button">
-      Buy now
-      <svg class="header-button-icon" width="12" height="12">
-        <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
-      </svg>
-    </button>
     <!--Бургер меню-->
     <button type="button" class="header-mobile-menu-open js-open-menu">
       <svg class="header-mobile-menu-open-ikon" width="32" height="32">
         <use href="./images/sprite.svg#icon-menu-fill"></use>
+      </svg>
+    </button>
+    <button type="button" class="header-button">
+      Buy now
+      <svg class="header-button-icon" width="12" height="12">
+        <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
       </svg>
     </button>
   </div>
@@ -41,14 +41,14 @@
           <use href="./images/sprite.svg#icon-close-line"></use>
         </svg>
       </button>
-      <a href="#" class="header-logo-mobile link">
+      <a href="#home" class="header-logo-mobile link">
         <svg class="header-logo-mobile-icon">
           <use href="./images/sprite.svg#icon-Logo"></use>
         </svg>
       </a>
       <ul class="header-site-nav-mobile list">
         <li class="header-item-mobile">
-          <a href="#" class="header-nav-link-mobile link">Home</a>
+          <a href="#home" class="header-nav-link-mobile link">Home</a>
         </li>
         <li class="header-item-mobile">
           <a href="#" class="header-nav-link-mobile link">How it’s made?</a>
