--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -159,3 +159,20 @@
   background-color: #ABABAB;
 }
 }
+
+
+.modal-send-form {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.modal-send-form-input {
+  font-family: var(--primary-font);
+  // font-style: normal;
+  // font-weight: 400;
+  font-size: 14px;
+  line-height: 1.4;
+
+  color: #131313;
+}
