--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -139,8 +139,10 @@
     text-align: center;
     background-color: #F8D24E;
     border: none;
-     border-radius: 10px;
+    border-radius: 10px;
     line-height: 1.2;
+    margin-right: auto;
+    margin-top: auto;
 }
   
   
