--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -141,6 +141,7 @@
     border: none;
     border-radius: 10px;
     line-height: 1.2;
+    display: inline-block;
     margin-right: auto;
     margin-top: auto;
 }
