--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -21,7 +21,6 @@
     <h2 class="visually-hidden">Order form</h2>
     <form class="modal-send-form">
       <label class="modal-send-form-label">
-        <span class="modal-send-form-label-wrapper">
           <input
             type="text"
             name="user_name"
@@ -35,7 +34,6 @@
         </span>
       </label>
       <label class="modal-send-form-label">
-        <span class="modal-send-form-label-wrapper">
           <input
             type="tel"
             name="user_phone"
@@ -48,7 +46,6 @@
         </span>
       </label>
       <label class="modal-send-form-label">
-        <span class="modal-send-form-label-wrapper">
           <input
             type="email"
             name="user_email"
@@ -61,7 +58,7 @@
       <label class="modal-send-form-label">
         <textarea
           name="user_comment"
-          class="modal-send-form-textarea"
+          class="modal-form-textarea"
           placeholder="Comment"
         ></textarea>
       </label>
