--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -190,4 +190,20 @@
   background-color: rgba(248, 210, 78, 0.1);
   color: #131313;
   margin-bottom: 12px;
+  outline: none;
+}
+
+.modal-form-textarea {
+  width: 224px;
+  height: 64px;
+  font-family: var(--primary-font);
+  font-size: 12px;
+  line-height: 1.4;
+  border: 1px solid #84A178;
+  border-radius: 10px;
+  background-color: rgba(248, 210, 78, 0.1);
+  color: #131313;
+  margin-bottom: 24px;
+  cursor: pointer;
+  resize: none;
 }
