--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,13 +1,10 @@
-
 .products {
-  text-align: center;
-  color: #131313;
-}
-
-.products {
-  width: 100%;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+  color: #131313;
+  background-position: center;
 }
 .products-natural {
   font-family: var(--primary-font);
@@ -59,11 +56,9 @@
   position: relative;
 }
 .products-link {
- border: none;
- cursor: pointer;
- background: 0 0;
-
- 
+  border: none;
+  cursor: pointer;
+  background: 0 0;
 }
 .products-item::before {
   content: ' ';
@@ -215,9 +210,8 @@
   }
   .products {
     background-image: url(../images/background/tab-bg-@1x-963.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    
+    // background-position: center;
+    // background-repeat: no-repeat;
   }
   .products-list {
     padding-bottom: 60px;
@@ -265,8 +259,9 @@
   .products {
     background-image: url(../images/background/desk-bg-@1x-1300.jpg);
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    // max-width: 100%;
+    // background-repeat: no-repeat;
+    // background-size: cover;
   }
   .products-item::before {
     content: ' ';
