--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -1,4 +1,4 @@
-:root {
+/*:root {
   --transition-dur-and-timing-fun: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -58,14 +58,14 @@
 
 @media screen and (max-width: 767px) {
   .modal-franchise {
-    min-width: 280px;
+    width: 280px;
     padding: 28px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .modal-franchise {
-    width: 568px;
+    max-width: 568px;
     padding: 32px 60px;
   }
 }
@@ -180,7 +180,7 @@
 
 
 .modal-send-form-input {
-  width: 224px;
+  width: 100%;
   height: 32px;
   font-family: var(--primary-font);
   font-size: 12px;
@@ -193,8 +193,17 @@
   outline: none;
 }
 
+@media screen and (min-width: 768px) {
+  .modal-send-form-input {
+    width: 368px;
+    height: 42px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
 .modal-form-textarea {
-  width: 224px;
+  width: 100%;
   height: 64px;
   font-family: var(--primary-font);
   font-size: 12px;
@@ -207,4 +216,14 @@
   cursor: pointer;
   resize: none;
   outline: none;
+}
+
+
+@media screen and (min-width: 768px) {
+  .modal-form-textarea {
+    width: 368px;
+    height: 84px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
