--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -10,6 +10,13 @@ ol {
   padding-left: 0;
   list-style: none;
 }
+.advantages {
+    width: 100%;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 64px;
+    background-color: #84A178;
+}
 
 .visibility-hidden {
   position: absolute;
@@ -24,17 +31,14 @@ ol {
   margin: -1px;
 }
 
-.advantages {
-  padding-left: 45px;
-  padding-right: 45px;
-  padding-bottom: 64px;
-}
+// .advantages {
+//   background-color: #84A178;
+// }
 
 .adv-list-cow {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  text-align: center;
   gap: 28px;
 }
 
@@ -48,6 +52,7 @@ ol {
   font-size: 36px;
   line-height: 1.22;
   letter-spacing: 0.04em;
+  text-align: center;
   text-transform: uppercase;
   margin-bottom: 16px;
   color: #fcfcfc;
@@ -56,8 +61,10 @@ ol {
 .adv-figure-text {
   font-family: var(--primary-font);
   font-weight: 700;
+  text-align: center;
   font-size: 12px;
   line-height: 170%;
+  letter-spacing: 0.02em;
   color: #fcfcfc;
 }
 
@@ -80,19 +87,34 @@ ol {
 }
 
 .adv-item-cow:last-child:before {
-  background-image: url(../images/ice-cream.png);
+  background-image: url(../images/ice-crema.png);
+}
+
+@media screen and (max-width: 479px) {
+
+  .advantages {
+    padding: 0 75px;
+    padding-bottom: 65px;
+  }
+
+}
+
+
+@media screen and (max-width: 480px) {
+
+  .advantages {
+    padding: 0 125px;
+    padding-bottom: 60px;
+  }
+
 }
 
 
 @media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-
+  
   .advantages {
-  padding-left: 76px;
-  padding-right: 76px;
-  padding-bottom: 204px;
+  padding: 0 125px;
+  padding-bottom: 60px;
   }
 
   .adv-list-cow {
@@ -113,6 +135,35 @@ ol {
 
   .adv-item-cow::before {
     margin-bottom: 32px;
+  }
+
+}
+
+
+@media screen and (min-width: 1200px) {
+
+  .advantages {
+    width: 100%;
+    padding: 0 16px;
+    padding-bottom: 178px;
+  }
+
+  .adv-list-cow {
+  gap: 32px;
+  }
+
+  .adv-figure {
+  font-size: 58px;
+  }
+
+  .adv-figure-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 176%;
+  }
+
+  .adv-item-cow::before {
+    margin-bottom: 40px;
   }
 
 }
@@ -142,36 +193,3 @@ ol {
     background-image: url(../images/ice-crema@2x.png);
     }
 } 
-
-
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-
-  .advantages {
-    padding-bottom: 178px;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  .adv-list-cow {
-  gap: 32px;
-  }
-
-  .adv-figure {
-  font-size: 58px;
-  }
-
-  .adv-figure-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 176%;
-  }
-
-  .adv-item-cow::before {
-    margin-bottom: 40px;
-  }
-
-}
-
