Замінив іконку на png. Було 6.4 Mb стало 87 Kb

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -41,7 +41,7 @@
         class="hero-dots-tablet"
       />
       <img
-        src="./images/hero/plate-tablet.svg"
+        src="./images/hero/plate-tablet.png"
         alt="Plate of ice cream"
         class="hero-plate"
       />
