--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -1,6 +1,5 @@
-<section>
-  <div class="container">
-    <div class="overlay js-overlay-modal">
+
+
       <div class="modal-read" data-modal="3">
         <button class="modal-btn-read" data-modal-close type="button">
           <svg class="modal-icon-close" width="24" height="24">
@@ -26,6 +25,7 @@
           labore et
         </p>
       </div>
-    </div>
-  </div>
-</section>
+<!-- Overlay modal window -->
+<div class="overlay js-overlay-modal"></div>
+  
+
