--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -1,5 +1,5 @@
 
-:root {
+/*:root {
     --transition-dur-and-timing-fun: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -24,11 +24,12 @@
      max-width: 1200px;
     }
 }
+*/
 
-
+/*MODAL READ MORE*/
 
 /* style overlay*/
-/*.overlay {
+.overlay {
     opacity: 0;
     visibility: hidden;
 
@@ -42,7 +43,7 @@
     transition: opacity var(--transition-dur-and-timing-fun);
     -webkit-transition: opacity var(--transition-dur-and-timing-fun);
     -moz-transition: opacity var(--transition-dur-and-timing-fun);
-}*/
+}
 
 .modal-read {
     position: absolute;
@@ -71,12 +72,12 @@
 }
 }
 
-/*.modal.active,
+.modal.active,
 .overlay.active {
     opacity: 1;
     visibility: visible;
 }
-*/
+
 .modal-read-title {
     color: #131313;
     font-family: var(--secondary-font);
