--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -8,15 +8,15 @@
 /* // 320 MOBILE */
 
 .hero {
-  min-width: 480px;
+  // min-width: 480px;
   padding-top: 40px;
-  background-color: #84a178;
+  // background-color: #84a178;
   // min-width: 320px;
   padding-top: 50px;
   /* background-color: #84a178; */
 }
 
-.container {
+.hero-container {
   position: relative;
   min-width: 320px;
   padding-left: 20px;
