--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -73,7 +73,7 @@
         </p>
       </li>
       <li class="about-list-item">
-        <button class="about-btn" type="button">
+        <button class="about-btn js-open-modal" data-modal="3"  type="button">
           Read more
           <svg class="about-btn-arrow">
             <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
