--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -17,29 +17,30 @@
     -moz-transition: opacity var(--transition-dur-and-timing-fun);
 }
 
-.modal-read {
+.modal {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: auto;
-    z-index: 30;
+    z-index: 530;
     background-color: #fff;
     border: 2px solid rgba(248, 210, 78, 1);
     border-radius: 10px;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 767px) {
     .modal-read {
-        min-width: 280px;
+        /*width: 280px;*/
         padding: 28px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .modal-read {
-        width: 568px;
+        /*width: 568px;*/
         padding: 32px 60px;
     }
 }
