--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -33,14 +33,14 @@
 
 @media screen and (max-width: 767px) {
     .modal-read {
-        /*width: 280px;*/
+        width: 280px;
         padding: 28px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .modal-read {
-        /*width: 568px;*/
+        width: 568px;
         padding: 32px 60px;
     }
 }
